[package]
name = "reverse_tcp_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
socket2 = "0.5"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
bytes = "1.0"
futures = "0.3"
httparse = "1.8"
http-body = "0.4"
axum = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
